made printer icon svg and fixed some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,14 @@ footer{
     justify-content: space-around;
     gap: 41%;
 }
+footer nav{
+    display: inline-flex;
+    color: black;
+    text-decoration: none;
+    font-size: 150%;
+    margin: 0px 10px;
+    justify-content: center;
+}
 footer a,footer span{
     font-size: 12pt;
     font-weight: 50;
@@ -212,16 +220,23 @@ width: 150px;
     background-color: #A63223;
     border-radius: 30px;
     color: #fff;
-
     padding: 15px;
+    border: 5px #A63223 solid;
 }
-.recipeSave img{
-    width: 35px;
-    height: 35px;
+.recipeSave button:hover{
+    color: #A63223;
+    border-color: #A63223;
+    background-color: #fff;
+}
+#printerIcon{
+    width: 50px;
+    height: 50px;
     padding: 5px;
-    object-fit: cover;
     border: 2px black solid;
     border-radius: 50%;
+}
+#printerIcon:hover{
+    background-color: #ececec;
 }
 .recipeName h1{
     font-size: 55pt;
